# geomandel

./: .agignore  .gitignore  .lvimrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  index.html
notebook/: Mandelbrot Zoom Calculator.ipynb  MandelbrotEscapeTime.ipynb  Performance Chart.ipynb  geomandel.ipynb  zoom_img_pictures.py
resources/: BernsteinContinuousColoring.ipynb  ContinuousColoringPlayground.ipynb  EscapeTimeColors.ipynb  EscapeTimeGrey.ipynb  EscapeTimeRGB.ipynb  FractalEscapeTime.ipynb  FractalZoomCalculator.ipynb  PerformanceChart.ipynb  QuadraticZoomPlayground.ipynb  SinusContinuousColoringPlayground.ipynb  VideoZoomPolynomial.ipynb  continuous_coloring.tex  continuous_coloring_bernstein.tex  continuous_index.tex  escape_time_coloring.tex  mandelbrot_set_equation.tex  memory_footprint_equation.tex  zoom_img_pictures.py  zoom_mandelbrot.py
src/: CMakeLists.txt  buffwriter.cpp  buffwriter.h  config.h.in  csvwriter.cpp  csvwriter.h  fractalcruncher.cpp  fractalcruncher.h  fractalcrunchmulti.cpp  fractalcrunchmulti.h  fractalcrunchsingle.cpp  fractalcrunchsingle.h  fractalparams.h  fractalzoom.cpp  fractalzoom.h  global.h  image_pnm.cpp  image_pnm.h  image_pnm_bw.cpp  image_pnm_bw.h  image_pnm_col.cpp  image_pnm_col.h  image_pnm_grey.cpp  image_pnm_grey.h  image_sfml.cpp  image_sfml.h  imagebw.cpp  imagebw.h  imagecol.cpp  imagecol.h  imagegrey.cpp  imagegrey.h  imagewriter.cpp  imagewriter.h  main.cpp  main_helper.h  mandelcruncher.cpp  mandelcruncher.h  mandelcrunchmulti.cpp  mandelcrunchmulti.h  (+7 more)
src/test/: CMakeLists.txt  buffwriter_mock.cpp  buffwriter_mock.h  fractalcruncher_mock.cpp  fractalcruncher_mock.h  mandelcruncher_mock.cpp  mandelcruncher_mock.h  test_commandline.cpp  test_computation.cpp  test_main.cpp  test_output.cpp
todo/: done.txt  report.txt  todo.txt
